--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ p {
 .featured-text { font-family: "Montserrat", serif;}
 
 ol, ul {
-  padding: 1.5rem;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
 }
 
 ul li {
@@ -63,6 +64,11 @@ li {
   vertical-align: text-top;
   font-weight: 100;
   padding-left: 0.5rem;
+}
+
+li p {
+
+  padding-bottom: 0.6rem;
 }
 
 
